--- a/css/style.css
+++ b/css/style.css
@@ -333,6 +333,11 @@ header{
 
     padding: 100px 0;
 }
+.resume-section .row{
+width: 100%;
+margin: auto;
+}
+.resume-items{}
 .resume-section .heading{
     margin-bottom: 100px;
 }
@@ -548,7 +553,7 @@ input{
     padding: 10px 25px;
     transition: 0.4s;
     font-weight: 600;
-    margin-left: 300px;
+    margin-left: 370px;
     /* float: right; */
 }
 .form-btn-custom:hover{
@@ -561,6 +566,9 @@ input{
 .social-section .nav{
     background-color: #f1fcff;
     border-bottom-right-radius: 36px;
+}
+.embed-responsive-16by9::before {
+    padding-top: 53.25%;
 }
 .social-section li{padding: 20px 0;padding-left: 50px;}
 .social-section a{
@@ -602,4 +610,19 @@ footer h6{
     padding: 20px 0;
     color: #fff;
     font-weight: 400;
+}
+
+
+.drawer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    box-shadow: 0 4px 10px rgba(60, 64, 67, 0.3);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
