--- a/css/madia.css
+++ b/css/madia.css
@@ -4,6 +4,11 @@
     border-bottom-right-radius: 36px;
     width: 89%;
 }
+.skill-section h1 {
+    text-align: center;
+    line-height: 0.9;
+    font-size: 57px;
+}
 }
 
 
@@ -40,7 +45,7 @@
 }
 .skill-section h1 {
     text-align: center;
-    line-height: .9;
+    line-height: 0.9;
     font-size: 57px;
 }
 .skill-section span {
