--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 .navbar {
-  
     justify-content: space-between;
-     padding-top: 0px
+     padding-top: 0px;
+     transition-duration: 0.5s;
 }
 .navbar img{}
 .navbar .nav-item{
@@ -11,7 +11,7 @@
 
 .navbar .navbar-nav .nav-link{
     position: relative;
-    padding-top: 30px;
+    padding-top: 27px;
 }
 .navbar .navbar-nav .nav-link::after{
     content: "";
@@ -23,7 +23,8 @@
     background-color: #6bc1d7;
     transition: all 0.4s;
 }
-.navbar .navbar-nav .nav-link:hover::after{
+.navbar .navbar-nav .nav-link:hover::after,
+.navbar .navbar-nav .nav-link.active::after{
     height: 5PX;
 }
 .navbar-dark .navbar-nav .nav-link::before{
@@ -37,7 +38,8 @@
     background-color: #6bc1d778;
     transition: all 0.4s;
 }
-.navbar-dark .navbar-nav .nav-link:hover::before{
+.navbar-dark .navbar-nav .nav-link:hover::before,
+.navbar-dark .navbar-nav .nav-link.active::before{
 height: 100%;
 }
 
@@ -47,11 +49,8 @@ height: 100%;
     top: 40%;
 }
 .social-icon li{
-   
 margin: 10px;
-   
 position: relative;
-   
 margin-right: 90px;
 }
 .social-icon li a:hover{
@@ -76,12 +75,23 @@ margin-right: 90px;
      bottom: -52px;
      left: -40px;
 }
+
 .banner{
     background-image: url(../images/banner.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     position: relative;
+}
+#particles-js{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.navbar-shrink{
+    background:#1a2526; 
 }
 .banner .row{
     height: 110vh;
@@ -449,24 +459,29 @@ margin: auto;
 }
 .work-section li{
     text-transform: uppercase;
-    /* margin: 0 17px; */
     font-size: 20px;
     color: #505050;
-    /* padding: 3px 21px; */
     border: 1px solid transparent;
 }
-.work-section a:hover,.work-section .active{
-    border: 1px solid #40afcc;
-    padding: 3px 21px;
-    border-bottom-right-radius: 22px;
-    color: #40afcc;
-}
-.work-section a{
+
+.work-section ul li button{
+    background-color: transparent;
     color: #505050;
+    text-transform: uppercase;
+    display: block;
     text-decoration: none;
+     border-bottom-right-radius: 22px;
     padding: 3px 21px;
     border: 1px solid transparent;
+    transition: 0.4s;
 }
+.work-section ul li  button:hover,
+.work-section ul li button:focus{
+    border: 1px solid #40afcc;
+    color: #40afcc;
+    outline: none;
+}
+
 .work-section .portfolio{}
 .work-section .portfolio div{
     padding-left: 10px !important;
@@ -626,4 +641,26 @@ footer h6{
     position: absolute;
     top: 0;
     left: 0;
+}
+.clicktop{
+    position: fixed;
+    background: #2188a2;
+    color: #fff;
+    bottom: 50px;
+    right: 50px;
+    width: 25px;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    list-style: 40px;
+    text-decoration: none;
+    border-radius: 30px;
+    transition: 0.4s;
+}
+.clicktop:hover{
+    background: #40afcc;
+    color: #fff;
+}
+.rellax{
+    transition: transform 10s cubic-bezier(0,1,.5,1);
 }
